--- a/content/themes/Divi-child/package.json
+++ b/content/themes/Divi-child/package.json
@@ -25,5 +25,8 @@
     "gulp-uglify": "^3.0.0",
     "sass-loader": "^6.0.6",
     "susy": "^2.2.12"
+  },
+  "dependencies": {
+    "gulp-install": "^1.1.0"
   }
 }
