--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,13 @@ staging-config.php
 live-config.php
 sitemap.xml
 sitemap.xml.gz
-content/uploads/*
-content/themes/*/node_modules
-content/db.php
-content/plugins/query-monitor/
-content/themes/*/assets/css/maps/
-content/advanced-cache.php
-content/cache/
-content/w3tc-config/
-content/plugins/w3-total-cache/
-content/plugins/w3tc-wp-loader.php
+wp-content/uploads/*
+wp-content/themes/*/node_modules
+wp-content/db.php
+wp-content/plugins/query-monitor/
+wp-content/themes/*/assets/css/maps/
+wp-content/advanced-cache.php
+wp-content/cache/
+wp-content/w3tc-config/
+wp-content/plugins/w3-total-cache/
+wp-content/plugins/w3tc-wp-loader.php
